# simple-budgets-alert

./: README.md  main.py  pyproject.toml
src/: __init__.py  bigquery_client.py  budget_client.py  cost_analyzer.py  queries.py
src/sql/: last_30_days.sql
